# hydra-gocean

./: README.md
host/: README.md
host/reference/: check.sh  configure-ffmpeg-4.3  decoders.txt  encoders.txt  filters.txt
xcore/: README.md
xcore/argus/: README.md
xcore/argus/eCAM_argus_camera/: Makefile
xcore/argus/eCAM_argus_camera/argus/: CMakeLists.txt  VersionConfig.h.in
xcore/argus/eCAM_argus_camera/argus/include/Argus/: Types.h
xcore/argus/eCAM_argus_camera/argus/samples/userAutoExposure/: main.cpp
xcore/argus/eCAM_argus_camera/argus/samples/userAutoWhiteBalance/: main.cpp
xcore/argus/eCAM_argus_camera/argus/samples/utils/: Validator.h
xcore/argus/eCAM_argus_camera/samples/00_video_decode/: video_decode_csvparser.cpp  video_decode_main.cpp
xcore/argus/eCAM_argus_camera/samples/01_video_encode/: video_encode.h  video_encode_csvparser.cpp  video_encode_main.cpp
xcore/argus/eCAM_argus_camera/samples/02_video_dec_cuda/: videodec_main.cpp
xcore/argus/eCAM_argus_camera/samples/03_video_cuda_enc/: video_cuda_enc_main.cpp
xcore/argus/eCAM_argus_camera/samples/08_video_dec_drm/: Makefile  video_dec_drm.cpp  video_dec_drm.h  video_dec_drm_conv.cpp  video_dec_drm_csvparser.cpp
xcore/argus/eCAM_argus_camera/samples/10_camera_recording/: main.cpp
xcore/argus/eCAM_argus_camera/samples/12_camera_v4l2_cuda/: camera_v4l2_cuda.cpp  camera_v4l2_cuda.h
xcore/argus/eCAM_argus_camera/samples/14_multivideo_decode/: multivideo_decode.h  multivideo_decode_main.cpp
xcore/argus/eCAM_argus_camera/samples/common/classes/: NvDrmRenderer.cpp  NvEglRenderer.cpp  NvJpegDecoder.cpp
xcore/argus/eCAM_argus_multicamera/: README
xcore/argus/eCAM_argus_multicamera/argus/: CMakeLists.txt  main.cpp  main.h
xcore/argus/eCAM_argus_multicamera/argus/include/Argus/: Types.h
xcore/argus/eCAM_argus_multicamera/argus/utility/: ArgusHelpers.cpp  CMakeLists.txt  CameraModuleEGL.cpp  CameraModuleEGL.h  CommonOptions.cpp  CommonOptions.h  ControlSettings.cpp  ControlSettings.h  MasterSlaveConfig.cpp  MasterSlaveConfig.h  ProcessFrameThread.cpp  ProcessFrameThread.h  UserInterface.cpp  UserInterface.h  Validator.h  Value.h  VersionConfig.h  VideoEncoder.cpp  VideoEncoder.h  userAEAlgorithm.cpp  userAEAlgorithm.h
xcore/argus/eCAM_argus_multicamera/argus/utility/nvmmapi/: NvEglRenderer.cpp
xcore/argus/econsys/: README.md
xcore/dsx/ds4/apps-common/includes/: deepstream_app_version.h
xcore/dsx/ds4/apps-common/src/: deepstream_source_bin.c
xcore/dsx/ds4/sample_apps/deepstream-infer-tensor-meta-test/: Makefile
xcore/dsx/ds4/sample_apps/deepstream-test5/: README  deepstream_test5_app_main.c
xcore/dsx/ds4/samples/configs/deepstream-app/: source1_savefile_csi_dec_infer_resnet_int8.txt  source4_savefile_1x4_3csi_1usb_infer_resnet_int8.txt  source6_savefile_3csi_3usb_infer_resnet_int8.txt
xcore/dsx/ds5/sample_apps/deepstream-appsrc-test/: README
xcore/dsx/ds5/sample_apps/deepstream-dewarper-test/: Makefile  deepstream_dewarper_test.c
xcore/dsx/ds5/sample_apps/deepstream-gst-metadata-test/: Makefile  deepstream_gst_metadata.c
xcore/dsx/ds5/sample_apps/deepstream-image-decode-test/: Makefile  README
xcore/dsx/ds5/sample_apps/deepstream-image-meta-test/: README
xcore/dsx/ds5/sample_apps/deepstream-infer-tensor-meta-test/: README  deepstream_infer_tensor_meta_test.cpp
xcore/dsx/ds5/sample_apps/deepstream-infer-tensor-meta-test/inferserver/: dstensor_sgie1_config.txt
xcore/dsx/ds5/sample_apps/deepstream-mrcnn-test/: deepstream_mrcnn_test.cpp
xcore/dsx/ds5/sample_apps/deepstream-nvdsanalytics-test/: tracker_config.yml
xcore/dsx/ds5/sample_apps/deepstream-nvof-test/: Makefile  deepstream_nvof_test.c
xcore/dsx/ds5/sample_apps/deepstream-opencv-test/: deepstream_opencv_test.c
xcore/dsx/ds5/sample_apps/deepstream-perf-demo/: Makefile  deepstream_perf_demo.cpp
xcore/dsx/ds5/sample_apps/deepstream-segmentation-test/: Makefile
xcore/dsx/ds5/sample_apps/deepstream-test1/: deepstream_test1_app.c
xcore/dsx/ds5/sample_apps/deepstream-test2/: deepstream_test2_app.c  dstest2_tracker_config.txt
xcore/dsx/ds5/sample_apps/deepstream-test3/: deepstream_test3_app.c
xcore/dsx/ds5/sample_apps/deepstream-test5/: README
xcore/dsx/ds5/sample_apps/deepstream-test5/configs/: test5_config_file_src_infer.txt  test5_config_file_src_infer_azure_iotedge.txt  test5_config_file_src_infer_tracker_sgie.txt  test5_dec_infer-resnet_tracker_sgie_tiled_display_int8.txt
xcore/dsx/ds51/apps-common/includes/: deepstream_app_version.h  deepstream_config.h  deepstream_config_file_parser.h
xcore/dsx/ds51/apps-common/src/: deepstream_source_bin.c
xcore/dsx/ds51/sample_apps/deepstream-app/: deepstream_app.c
xcore/dsx/ds51/sample_apps/deepstream-appsrc-test/: README
xcore/dsx/ds51/sample_apps/deepstream-audio/: Makefile
xcore/dsx/ds51/sample_apps/deepstream-gst-metadata-test/: Makefile  README
xcore/dsx/ds51/sample_apps/deepstream-image-decode-test/: Makefile
xcore/dsx/ds51/sample_apps/deepstream-image-meta-test/: Makefile
xcore/dsx/ds51/sample_apps/deepstream-infer-tensor-meta-test/: Makefile  dstensor_pgie_config.txt
xcore/dsx/ds51/sample_apps/deepstream-mrcnn-test/: dsmrcnn_pgie_config.txt
xcore/dsx/ds51/sample_apps/deepstream-nvdsanalytics-test/: Makefile.ds  deepstream_nvdsanalytics_test.cpp
xcore/dsx/ds51/sample_apps/deepstream-nvof-test/: Makefile  README  deepstream_nvof_test.c
xcore/dsx/ds51/sample_apps/deepstream-opencv-test/: Makefile
xcore/dsx/ds51/sample_apps/deepstream-perf-demo/: Makefile
xcore/dsx/ds51/sample_apps/deepstream-segmentation-test/: Makefile
xcore/dsx/ds51/sample_apps/deepstream-test2/: Makefile  dstest2_tracker_config.txt
xcore/dsx/ds51/sample_apps/deepstream-testsr/: Makefile  README
xcore/dsx/ds51/sample_apps/deepstream-transfer-learning-app/: Makefile
xcore/lidar/: README.md
xcore/lidar/livox/viewer/: livox_viewer.sh
xcore/multimedia/: README.md
xos/: README.md
xos/dsx/: README.md
xos/dsx/ds4/sources/gst-plugins/gst-dsexample/: Makefile  (+1 more)
xos/ros/: README.md  nano-install-ros.sh  nano-setup-catkin-workspace.sh
(+173 files in other folders)
